[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rf-plateau-hpo"
version = "0.1.0"
description = "Random Forest OOB plateau tuning experiments and utilities"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Andrey Lange" }]

dependencies = [
  # Keep NumPy <2.0 for robust Python 3.8 support
  "numpy>=1.21,<2.0",
  # Pandas 2.2+ dropped Python 3.8; 2.0–2.1 still work
  "pandas>=1.4,<2.2",
  # 1.3 supports callable oob_score on RandomForest
  "scikit-learn>=1.3,<1.4",
  # Optuna versions known to work well on Python 3.8
  "optuna>=3.1,<3.6",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  # Data sources (optional)
  "kaggle>=1.6.0",
  "ucimlrepo>=0.0.7",
  # Notebooks
  "jupyter>=1.0",
  "ipykernel>=6.0",
  # For parquet/xlsx/xls/arff
  "pyarrow>=14,<16", "openpyxl>=3.1", "xlrd<2.0", "scipy>=1.7", "liac-arff>=2.5"
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["rf_plateau_hpo*"]
