[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rf-plateau-hpo"
version = "0.1.0"
description = "Random Forest OOB plateau search and Optuna-based HPO utilities"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Andrey Lange" }]
keywords = [
  "random forest",
  "hyperparameter optimization",
  "Optuna",
  "TPE",
  "Hyperband",
  "out-of-bag",
  "ensemble size",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  # Keep NumPy <2.0 for robust Python 3.8 support.
  "numpy>=1.21,<2.0",
  # Pandas 2.2+ dropped Python 3.8; 2.0-2.1 still work.
  "pandas>=1.4,<2.2",
  # scikit-learn 1.3 supports callable oob_score on RandomForest.
  "scikit-learn>=1.3,<1.4",
  "optuna>=3.1,<3.6",
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/lange-am/rf_plateau_hpo"
Repository = "https://github.com/lange-am/rf_plateau_hpo"

[project.optional-dependencies]
dev = [
  # Data sources (optional)
  "kaggle>=1.6.0",
  "ucimlrepo>=0.0.7",
  # Notebooks and kernel support
  "jupyterlab>=4.0,<4.4",
  "notebook>=7.0,<7.4",
  "ipykernel>=6.0",
  # Experiment persistence / progress / analysis / plotting
  "dill>=0.3.8",
  "tqdm>=4.66",
  "scipy>=1.7",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  # For parquet/xlsx/xls/arff
  "pyarrow>=14,<16",
  "openpyxl>=3.1",
  "xlrd<2.0",
  "liac-arff>=2.5",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["rf_plateau_hpo*"]
